--- a/background.html
+++ b/background.html
@@ -345,13 +345,19 @@
             });
 
 
-            Platform.event.on("window-remove", function (win) {
-//                var level = indent[win.index];
-//                if (level) {
-//                    console.log("foo");
-                indent.splice(win.index, 1);
-//                }
-            });
+            var focusedByID = {};
+
+            function make(tab) {
+                var index = tab.window.index;
+//                                } catch (e) {
+//                                    console.error(e);
+//                                }
+
+                if (!indent[index]) {
+                    indent[index] = [];
+                }
+                return indent[index];
+            }
 
             function insert(tab, index) {
                 var level = indent[tab.window.index];
@@ -371,68 +377,187 @@
                 }
             }
 
+            function sub(level, list, parent, i) {
+                for (i; i < level.length; i += 1) {
+//                    console.log(level[i], parent);
+                    if (!level[i] || level[i] <= parent) {
+                        break;
+                    }
+
+                    level[i] -= 1;
+
+                    if (level[i] === 0) {
+                        delete level[i];
+                    }
+
+                    Platform.event.trigger("tab-indent", list[i], level[i]);
+                }
+            }
+
             function moveup(tab, index) {
                 var level = indent[tab.window.index];
                 if (level) {
                     var parent = level[index];
-                    var list = tab.window.tabs;
-//
-//                    var removed = [];
 
                     level.splice(index, 1);
 
-                    for (var i = index; i < level.length; i += 1) {
-//                        console.log(level[i], parent);
-                        if (!level[i] || level[i] <= parent) {
-                            break;
-                        }
-//                        if (typeof parent !== "number" && level[i] === tab.index) {
-////                            if () {
-////                                level[i] = parent;
-////                            } else {
-//                            removed.push(i);
-////                            }
-////
-////                            recurse(i, level[i]);
-//                        } else {
-                        level[i] -= 1;
-
-                        if (level[i] === 0) {
-                            delete level[i];
-//                            Platform.event.trigger("tab-indent", list[index]);
-//                            removed.push(i);
-                        }/* else {
-
-                        }*/
-
-                        Platform.event.trigger("tab-indent", list[i], level[i]);
-//                        }
-                    }
-//
-                    /*var lastindex = tab.index;
-
-                    for (var i = tab.index; i < level.length; i += 1) {
-                        if (level[i]) {
-                            lastindex = i;
-                        }
-                    }
-
-                    level.length = lastindex;*/
-/*
-                    function recurse(index, parent) {
-                        level.forEach(function (item, i) {
-
-                        });
-                    }
-                    recurse(, );*/
-/*
-                    removed.forEach(function (index, i) {
-                        level.splice(index - i, 1);
-
-                        Platform.event.trigger("tab-indent", list[index]);
-                    });*/
+                    sub(level, tab.window.tabs, parent, index);
                 }
             }
+
+            function check(tab, focused) {
+//                console.log(tab, focused);
+//                try {
+                if (tab.index !== focused.index) {
+//                if (tab.status === "loading") {
+                    Platform.history.lastVisit(tab.url, function (visit) {
+                        if (visit.transition === "link") {
+//                            console.log(visit.referringVisitId);
+//
+//                                try {
+                            var level = make(tab);
+
+                            var amount = level[focused.index] + 1 || 1;
+
+                            if (level.length < tab.index) {
+                                level.length = tab.index;
+                            }
+//
+//                                console.log(tab.index);
+
+                            level.splice(tab.index, 0, amount);
+//                                tab.parentId = focused.id;
+
+                            Platform.event.trigger("tab-indent", tab, amount);
+//                            console.log(tab, focused);
+                        }
+//                        console.log(visit.transition);
+                    });
+                }
+//                } catch (e) {
+//                    console.error(e);
+//                }
+            }
+//
+//            function add(level, list, parent, index) {
+//            }
+
+
+            indent.sub = function (tab) {
+                var level = indent[tab.window.index];
+                if (level) {
+                    var index = tab.index;
+//                    var parent = level[index];
+//                    level[index] -= 1;
+//
+//                    level.splice(index, 1);
+
+                    if (level[index]) {
+                        sub(level, tab.window.tabs, level[index], index + 1);
+
+                        Platform.event.trigger("tab-indent", tab, level[index] -= 1);
+                    }
+                }
+            };
+//
+//            function add(level, list, value, index) {
+//
+//            }
+
+            indent.add = function (tab) {
+//                var index = tab.window.index;
+//
+//                if (!indent[index]) {
+//                    indent[index] = [];
+//                }
+                var index = tab.index;
+                if (index === 0) {
+                    return;
+                }
+
+                var i, level = make(tab);//indent[index];
+
+                var list = tab.window.tabs;
+                var value = level[index];
+
+                if (value && value > level[index - 1]) {
+                    /*for (var i = index; i > 0; i -= 1) {
+                        if (level[i - 1] >= level[i]) {
+                            level[i] += 1;
+
+                            Platform.event.trigger("tab-indent", list[i], level[i]);
+                            break;
+                        }
+                    }
+
+                    if (i === 0) {
+                        return;
+                    }*/
+//
+                    for (i = index - 1; i > 0; i -= 1) {
+//                        console.log(i === index);
+                        if (level[i - 1] >= level[i]) {
+//                            var value = level[i];
+                            for (i; i <= index; i += 1) {
+                                Platform.event.trigger("tab-indent", list[i], level[i] += 1);
+                            }
+//                            level[i] += 1;
+//                            add(level, list, level[i] + 1, i);
+//                            Platform.event.trigger("tab-indent", list[i], level[i]);
+                            break;
+                        }
+                    }
+/*
+                    if (i === index) {
+                        return;
+                    }*/
+                } else {
+//
+//                if (value && value > level[index - 1]) {
+//
+//                } else {
+//                var index = tab.index;
+//                    var parent = level[index];
+//                    var list = tab.window.tabs;
+//                if (value) {
+//                    console.log(value, index + 1, level.length);
+                //                console.log(index, level.length);
+//
+//                    add(level, list, value, index + 1);
+//                }
+                    for (i = index + 1; i < level.length; i += 1) {
+                        if (!level[i] || level[i] <= value) {
+                            break;
+                        }
+
+                        Platform.event.trigger("tab-indent", list[i], level[i] += 1);
+                    }
+
+                    level[index] = value + 1 || 1;
+
+                    Platform.event.trigger("tab-indent", tab, level[index]);
+//                    level[index] -= 1;
+//
+//                    level.splice(index, 1);
+//
+//                    sub(level, list, level[index], index + 1);
+/*
+                if (level[index]) {
+
+
+                    Platform.event.trigger("tab-indent", tab, level[index]);
+                }*/
+                }
+            };
+
+
+            Platform.event.on("window-remove", function (win) {
+//                var level = indent[win.index];
+//                if (level) {
+//                    console.log("foo");
+                indent.splice(win.index, 1);
+//                }
+            });
 
             Platform.event.on("tab-move", function (tab, info) {
 //                var level = indent[tab.window.index];
@@ -487,56 +612,12 @@
                 console.log(tab, indent);
 //                }
             });*/
-/*!
+/*
             ["tab-update", "tab-create", "window-create"].forEach(function (name) {
                 Platform.event.on(name, function () {
                     console.warn(name);
                 });
             });*/
-
-            var focusedByID = {};
-
-            function check(tab, focused) {
-//                console.log(tab, focused);
-//                try {
-                if (tab.index !== focused.index) {
-//                if (tab.status === "loading") {
-                    Platform.history.lastVisit(tab.url, function (visit) {
-                        if (visit.transition === "link") {
-//                            console.log(visit.referringVisitId);
-//
-//                                try {
-                            var index = tab.window.index;
-//                                } catch (e) {
-//                                    console.error(e);
-//                                }
-
-                            if (!indent[index]) {
-                                indent[index] = [];
-                            }
-                            var level = indent[index];
-
-                            var amount = level[focused.index] + 1 || 1;
-
-                            if (level.length < tab.index) {
-                                level.length = tab.index;
-                            }
-//
-//                                console.log(tab.index);
-
-                            level.splice(tab.index, 0, amount);
-//                                tab.parentId = focused.id;
-
-                            Platform.event.trigger("tab-indent", tab, amount);
-//                            console.log(tab, focused);
-                        }
-//                        console.log(visit.transition);
-                    });
-                }
-//                } catch (e) {
-//                    console.error(e);
-//                }
-            }
 
             Platform.event.on("tab-update", function (tab) {
                 var focused = focusedByID[tab.id];
@@ -577,18 +658,17 @@
                 _gaq.push(["_trackEvent", "Statistics", "tabs.length", tabcount + "", tabcount]);
             }
 
-            function add() {
+            Platform.event.on("tab-create", function () {
                 counter.set("total-number", counter.get("total-number") + 1);
                 counter.set("session-number", counter.get("session-number") + 1);
                 counter.update();
-            }
-            function subtract() {
+            });
+
+            Platform.event.on("tab-remove", function () {
                 counter.set("total-number", counter.get("total-number") - 1);
                 counter.set("session-number", counter.get("session-number") - 1);
                 counter.update();
-            }
-            Platform.event.on("tab-create", add);
-            Platform.event.on("tab-remove", subtract);
+            });
         });
 
 
