--- a/background.html
+++ b/background.html
@@ -269,6 +269,7 @@
 //            var index = 0;
 //
             var indent = Options.get("windows.tab-indent");
+            var titles = Options.get("windows.titles");
             var tabcount = 0;
 
             windows.forEach(function (item, i) {
@@ -301,9 +302,22 @@
                 });*/
             });
 
+            function fit() {
+                for (var i = 0; i < arguments.length; i += 1) {
+                    if (arguments[i].length > windows.length) {
+                        arguments[i].length = windows.length;
+                    }
+                }
+            }
+
+            fit(indent, titles);
+/*
             if (indent.length > windows.length) {
                 indent.length = windows.length;
             }
+            if (titles.length > windows.length) {
+                titles.length = windows.length;
+            }*/
 
 //            var lastfocused;
 //
@@ -414,20 +428,44 @@
                     sub(level, tab.window.tabs, parent, index);
                 }
             }
+/*
+            chrome.history.onVisited.addListener(function (result) {
+                console.log("visited", result.url);
+            });
+
+            chrome.tabs.onCreated.addListener(function (tab) {
+                console.log("created", tab.url);
+            });
+
+            chrome.tabs.onUpdated.addListener(function (id, info, tab) {
+                console.log("updated", tab.url);
+            });*/
+
+            function equals(string) {
+                for (var i = 1; i < arguments.length; i += 1) {
+                    if (string === arguments[i]) {
+                        return true;
+                    }
+                }
+            }
 
             function check(tab, focused) {
 //                console.log(tab, focused);
 //                try {
                 if (tab.index !== focused.index) {
 //                if (tab.status === "loading") {
+//                    console.log("checked", tab.url);
                     Platform.history.lastVisit(tab.url, function (visit) {
-                        if (visit.transition === "link") {
+//                        console.log(visit.transition);
+//                        switch (visit.transition) {
+//                        case "link":          //* FALLTHRU
+//                        case "reload":        //* FALLTHRU
+//                        case "auto_bookmark":
+                        if (equals(visit.transition, "link", "reload", "auto_bookmark")) {
 //                            console.log(visit.referringVisitId);
 //
 //                                try {
                             var level = make(tab);
-
-                            var amount = level[focused.index] + 1 || 1;
 
                             if (level.length < tab.index) {
                                 level.length = tab.index;
@@ -435,7 +473,21 @@
 //
 //                                console.log(tab.index);
 
-                            level.splice(tab.index, 0, amount);
+                            level.splice(tab.index, 0, null);
+
+                            var amount = level[focused.index] + 1 || 1,
+                                parent = level[tab.index - 1] || 0;
+//
+//                            console.log(amount, parent);
+//!                            var reload = visit.transition === "reload";
+                            if (amount - 1 > parent || /*!(reload && */amount < parent) { //* 2+ levels deep
+//                                console.log("too big", parent, amount);
+                                amount = parent + 1;
+                            }
+//
+//                            console.log(focused.index, tab.index, level[focused.index]);
+
+                            level[tab.index] = amount;
 //                                tab.parentId = focused.id;
 
                             Platform.event.trigger("tab-indent", tab, amount);
@@ -574,6 +626,7 @@
 //                if (level) {
 //                    console.log("foo");
                 indent.splice(win.index, 1);
+//                undone.splice(win.index, 1);
 //                }
             });
 
@@ -642,10 +695,11 @@
             Platform.event.on("tab-create", function (tab) {
 //                focused = focused || Platform.tabs.getSelected(tab.windowId);
 //
-//                console.log(tab.url);
+//                console.log(tab.id);
                 var focused = Platform.tabs.getSelected(tab.windowId);
                 if (focused) {
                     if (tab.url) {
+//                        console.log("tab-create");
                         check(tab, focused);
                     } else {
                         focusedByID[tab.id] = focused;
@@ -655,7 +709,9 @@
                         }, 25);*/
     //                    console.error(tab);
                     }
-                }
+                }// else {
+//                    console.error(tab);
+//                }
             });
 
 //            Platform.windows.getAll().forEach(function (windows) {
