Moving around some files into different folders.

--- a/background.html
+++ b/background.html
@@ -7,9 +7,9 @@
 <body>
     <script src="/lib/Options.js"></script>
     <script src="/lib/Platform.js"></script>
-
     <script src="/lib/Array.js"></script>
-    <script src="/lib/Analytics.js"></script>
+
+    <script src="/js/Analytics.js"></script>
     <script>
         /*global _gaq, Options, Platform */
         "use strict";
