--- a/options.html
+++ b/options.html
@@ -17,9 +17,9 @@
         <script src="/lib/Options.js"></script>
         <script src="/lib/UI%20Helper.js"></script>
         <script src="/lib/Array.js"></script>
-        <script src="/lib/Global%20Helper.js"></script>
 
-        <script src="/lib/Analytics.js"></script>
+        <script src="/js/Global%20Helper.js"></script>
+        <script src="/js/Analytics.js"></script>
         <script>
             "use strict";
             /*global Options, UI */
