--- a/themes/window-viewer.html
+++ b/themes/window-viewer.html
@@ -5,10 +5,10 @@
     <title>Theme Viewer</title>
 
     <script src="/lib/Options.js"></script>
-    <script src="/themes/color-sync.js"></script>
+    <script src="/js/color-sync.js"></script>
 
     <link rel="stylesheet" type="text/css" href="/lib/Options.css" />
-    <link rel="stylesheet" type="text/css" href="/window.css" />
+    <link rel="stylesheet" type="text/css" href="/css/window.css" />
     <link rel="stylesheet" type="text/css" href="/views/horizontal.css" />
 
     <style type="text/css">
