--- a/window.html
+++ b/window.html
@@ -5,7 +5,7 @@
     <title>Tab Organizer</title>
 
     <script src="/lib/Options.js"></script>
-    <script src="/themes/color-sync.js"></script>
+    <script src="/js/color-sync.js"></script>
     <script>
         /*global Options */
         "use strict";
@@ -79,26 +79,26 @@
 
     <link rel="stylesheet" type="text/css" href="/lib/Options.css" />
     <link rel="stylesheet" type="text/css" href="/lib/UI%20Helper.css" />
-    <link rel="stylesheet" type="text/css" href="/window.css" />
+    <link rel="stylesheet" type="text/css" href="/css/window.css" />
 </head>
 <body>
     <script src="/lib/Platform.js"></script>
     <script src="/lib/Undo.js"></script>
     <script src="/lib/Array.js"></script>
-    <script src="/lib/Global%20Helper.js"></script>
     <script src="/lib/UI%20Helper.js"></script>
-    <script src="/lib/Event%20Helper.js"></script>
     <script src="/lib/parser.js"></script>
-    <script src="/lib/action.search.js"></script>
     <script src="/lib/Queue.js"></script>
-    <script src="/Tab%20Organizer.js"></script>
 
-    <script src="/lib/Analytics.js"></script>
+    <script src="/js/Global%20Helper.js"></script>
+    <script src="/js/Event%20Helper.js"></script>
+    <script src="/js/action.search.js"></script>
+    <script src="/js/Tab%20Organizer.js"></script>
+    <script src="/js/Analytics.js"></script>
 
     <!--**
         *  This is to make it easier to take screenshots when the UI changes.
         *-->
     <!--!<script src="http://documentation.tab-organizer.googlecode.com/hg/screenshot.js"></script>-->
-    <script src="/window.js"></script>
+    <script src="/js/window.js"></script>
 </body>
 </html>
