Moving undo rules into a separate file.

--- a/window.html
+++ b/window.html
@@ -100,5 +100,6 @@
         *-->
     <!--!<script src="http://documentation.tab-organizer.googlecode.com/hg/screenshot.js"></script>-->
     <script src="/js/window.js"></script>
+    <script src="/js/undo.js"></script>
 </body>
 </html>
