--- a/window.html
+++ b/window.html
@@ -6,69 +6,7 @@
 
     <script src="/lib/Options.js"></script>
     <script src="/js/color-sync.js"></script>
-    <script>
-        /*global Options */
-        "use strict";
-
-        (function () {
-            var link = document.createElement("link");
-            link.rel = "stylesheet";
-            link.type = "text/css";
-
-            function href(value) {
-                link.href = "/views/" + value + ".css";
-            }
-            href(Options.get("windows.type"));
-
-            function find(text, func) {
-                var rules = link.sheet.cssRules;
-
-                for (var i = 0; i < rules.length; i += 1) {
-                    if (rules[i].selectorText === text) {
-                        return func(rules[i]);
-                    }
-                }
-            }
-
-            var types = {
-                "grid": function () {
-                    find(".window", function (rule) {
-                        var width = Options.get("windows.grid.columns");
-                        rule.style.width = 100 / width + "%";
-
-                        var height = Options.get("windows.grid.rows");
-                        rule.style.height = 100 / height + "%";
-                    });
-                }
-            };
-
-            function update() {
-                var action = types[Options.get("windows.type")];
-                if (action) {
-                    action();
-                }
-            }
-            addEventListener("DOMContentLoaded", update, true);
-
-            Options.event.on("change", function (event) {
-                var columns = (event.name === "windows.grid.columns"),
-                    rows = (event.name === "windows.grid.rows"),
-                    type = (event.name === "windows.type");
-
-                if (type) {
-                    href(event.value);
-                }
-
-                if (columns || rows || type) {
-                    update();
-
-                    state.search({ scroll: true, focused: true, nodelay: true });
-                }
-            });
-
-            document.head.appendChild(link);
-        }());
-    </script>
+    <script src="/js/view-sync.js"></script>
 
     <link rel="stylesheet" type="text/css" href="/lib/Options.css" />
     <link rel="stylesheet" type="text/css" href="/lib/UI%20Helper.css" />
