Fixing an issue with context menus in grid layout.
Also, adding in the ability to sort windows in ascending order.

--- a/background.html
+++ b/background.html
@@ -79,6 +79,9 @@
         if (Options.get("counter.reset.time.minute") === 0) {
             Options.set("counter.reset.time.minute", "00");
         }
+        if (Options.get("windows.sort.type") === "tab-number") {
+            Options.set("windows.sort.type", "tab-number >");
+        }
 
 
         var config = Options.snapshot().user;
