Adding in the ability to sort windows by name.

--- a/window.html
+++ b/window.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="/css/window.css" />
 </head>
 <body>
+    <script src="/lib/KAE.array.js"></script>
     <script src="/lib/Platform.js"></script>
     <script src="/lib/Undo.js"></script>
     <script src="/lib/Array.js"></script>
