Update issue 1 Status: Pending Labels: -Component-Platform

--- a/background.html
+++ b/background.html
@@ -472,7 +472,7 @@
         });
 
         Platform.message.on("lib.keyboard", function (event) {
-            if (event.type === "keyup") {
+            if (event.type === "keydown") {
                 var ctrl = Options.get("popup.hotkey.ctrl");
                 var letter = String.fromCharCode(event.which);
 
