Improving the autocomplete functionality of the search box.

--- a/background.html
+++ b/background.html
@@ -68,6 +68,7 @@
         Options.setObject("tabs.visited.byURL");
         Options.setObject("counter.state");
 
+        Options.setArray("search.past-queries");
         Options.setArray("windows.tab-indent");
         Options.setArray("windows.titles");
         Options.setArray("macros.list");
